--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.2.9",
     "nanoid": "^4.0.0",
     "react": "^18.1.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.1.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
